--- a/assets/globals.scss
+++ b/assets/globals.scss
@@ -7,6 +7,10 @@
 	--accent-purple: hsl(292deg 29% 41%);
 	--accent-green: hsl(143deg 100% 31%);
 	--accent-red: hsl(350deg 100% 44%);
+
+	--text-white: hsl(0deg 0% 100%);
+	--text-black: hsl(0deg 0% 0%);
+	--text-active: hsl(107, 100%, 80%);
 }
 
 html,
